--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -46,7 +46,7 @@
     color: white;
     text-decoration: none;
     margin: 0 auto;
-    color: black;
+    color: rgb(255, 254, 254);
     background-color: #f39c12;
     border-radius: 5px;
 }
@@ -56,6 +56,7 @@
     width: 100%;
     text-align: center;
     margin-bottom: 20px;
+    
 }
 
 .social__wrap {
