just install https://cookie-script.com/

--- a/src/pages/scrollToTopButton/ScrollToTopButton.css
+++ b/src/pages/scrollToTopButton/ScrollToTopButton.css
@@ -1,7 +1,7 @@
 .scroll-to-top {
     position: fixed;
-    bottom: 85px;
-    left: 20px;
+    bottom: 65px;
+    left: 11px;
     width: 45px;
     height: 45px;
     border-radius: 50%;
@@ -22,75 +22,21 @@
 
 
 
-.cookie-icon {
-  position: fixed;
-  bottom: 20px;
-  left: 20px;
-  font-size: 24px;       
-  color: white;          
-  background-color: #f39c12; 
-  padding: 10px;          
-  border-radius: 50px;    
-  cursor: default;
-  z-index: 1000;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.3); 
-  width: 25px;
-  height:25px; 
-  overflow: hidden; 
-  white-space: nowrap; 
-  transition: width 0.3s ease, background-color 0.3s ease;
-   display: flex;              
-  align-items: center;        
-  transition: width 0.3s ease, background-color 0.3s ease;
-   
-}
-.cookie-icon:hover {
-    background-color: #388e3c; 
-}
-
-.cookie-icon svg {
-  flex-shrink: 0;
-  width: 24px;
-  height: 24px;
-}
-
-.scroll-to-top,d
-.cookie-icon {
+.scroll-to-top {
     position: fixed;
-    left: 20px;
     z-index: 1000;
     transition: opacity 0.4s ease, transform 0.4s ease;
     opacity: 0;
     transform: translateY(20px);
 }
 
-.scroll-to-top.visible,
-.cookie-icon.visible {
+.scroll-to-top.visible {
+ 
     opacity: 1;
     transform: translateY(0);
 }
 
-.cookie-icon.visible {
-    
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.cookie-tooltip {
-    margin-left: 10px;
-    color: white;
-    font-size: 14px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    pointer-events: none; 
-}
 
 
-.cookie-icon:hover {
-    width: 220px;
-}
 
-.cookie-icon:hover .cookie-tooltip {
-    opacity: 1;
-}
 
