creating Notification Card

--- a/src/pages/scrollToTopButton/ScrollToTopButton.css
+++ b/src/pages/scrollToTopButton/ScrollToTopButton.css
@@ -5,8 +5,8 @@
     width: 45px;
     height: 45px;
     border-radius: 50%;
-    background-color: #f39c12; 
-    color: white;
+    background-color: #060400; 
+    color: #f39c12;
     border: none;
     font-size: 24px;
     cursor: pointer;
