--- a/src/Card/notificationCard.css
+++ b/src/Card/notificationCard.css
@@ -1,16 +1,24 @@
 .notification-card-wrapper {
  position: fixed;
   top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; 
+  z-index: 1001; 
+  width: 100%; 
 }
 
 .notification-card-backdrop {
-  position: fixed;
+   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
   z-index: 1000;
-  pointer-events: none; 
+  cursor: not-allowed;
 }
 
 .notification-card {
