--- a/src/Card/brand.css
+++ b/src/Card/brand.css
@@ -36,6 +36,24 @@
     object-fit: cover;
 }
 
+@media (max-width: 768px) {
+    .category-card {
+        padding: 5px;
+    }
+
+    .category-card img {
+        width: 90%;
+        max-width: 300px;
+    }
+
+    .brand-name {
+        margin: 10px 10px 0 10px;
+        padding: 8px;
+        font-size: 1rem;
+        max-width: 100%;
+    }
+}
+
 
 
 
