--- a/src/pages/lastproduct/lastproduct.css
+++ b/src/pages/lastproduct/lastproduct.css
@@ -116,9 +116,20 @@
 }
 
 @media (max-width: 768px) {
+  .container3 {
+    margin: 40px 10px;
+    width: auto;
+  }
+
+  .header-section {
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    margin-right: 0;
+  }
   .title-last-product {
     font-size: 1.5rem;
-    text-align: center;  
+    text-align: center;
     margin-bottom: 10px;
   }
 
