--- a/src/pages/scrollToTopButton/ScrollToTopButton.css
+++ b/src/pages/scrollToTopButton/ScrollToTopButton.css
@@ -36,7 +36,7 @@
     transform: translateY(0);
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .scroll-to-top {
     width: 35px;
     height: 35px;
@@ -44,7 +44,7 @@
     bottom: 50px;
     left: 10px;
   }
-}
+} */
 
 
 
