--- a/src/Card/divider.css
+++ b/src/Card/divider.css
@@ -5,3 +5,12 @@
     margin-left: 179px;
     width: 80%;
   }
+
+
+  @media (max-width: 480px) {
+  .divider {
+    margin-left: auto;  
+    margin-right: auto; 
+    width: 100%;
+  }         
+}
