--- a/src/pages/navbar/nav.css
+++ b/src/pages/navbar/nav.css
@@ -159,6 +159,7 @@
 }
 
 .FaHeart {
+  position: relative;
   background-color: black;
   color: white;
   border-radius: 50%;
@@ -287,7 +288,7 @@
   border-radius: 50%;
   min-width: 18px;
   height: 18px;
-  line-height: 14px;
+  line-height: 18px;
   text-align: center;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
   pointer-events: none;
@@ -296,14 +297,21 @@
 
 .heart-badge {
   position: absolute;
-  top: -5px;
-  right: -5px;
-  background-color: red;
+  top: -6px;
+  right: -6px;
+  background-color: #27ae60;
   color: white;
-  border-radius: 50%;
-  padding: 2px 6px;
   font-size: 12px;
   font-weight: bold;
+  padding: 1px 1px;
+  border-radius: 50%;
+  min-width: 18px;
+  height: 18px;
+  line-height: 18px;
+  text-align: center;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+  pointer-events: none;
+  user-select: none;
 }
 
 @keyframes scroll {
