--- a/src/pages/brandDetails/brandDetails.css
+++ b/src/pages/brandDetails/brandDetails.css
@@ -1,74 +1,79 @@
-
 .brand-details {
-    padding: 20px;
-    text-align: center;
-    margin: 40px 180px 
+  padding: 20px;
+  text-align: center;
+  margin: 40px 180px;
 }
-
 
 .brand-title {
-    font-size: 24px;
-    color:black;
-    margin-bottom: 10px;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 25px;
-   
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: black;
+  font-weight: 900;
+  font-size: 2.5rem;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transform: skew(-15deg);
+  animation: subtleMove 2s ease-in-out infinite alternate;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
+@keyframes subtleMove {
+  0% {
+    transform: skew(-15deg) translateX(0);
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  }
+  100% {
+    transform: skew(-15deg) translateX(5px);
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+  }
+}
 
 .title-underline3 {
-    height: 2px;
-    background-color: #f39c12;
-    margin-bottom: 20px; 
-    margin-right: 200px;
-    width: 102%;
+  height: 2px;
+  background-color: #f39c12;
+  margin-bottom: 20px;
+  margin-right: 200px;
+  width: 102%;
 }
-
 
 .model-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20px;
 }
-
 
 .model-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-    background-color: white;
-    border-radius: 8px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    text-decoration: none; 
-    color: inherit;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  background-color: white;
+  border-radius: 8px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  text-decoration: none;
+  color: inherit;
 }
 
-
-
-
 .model-image {
-    width: 60%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 10px;
+  width: 60%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
 
 .model-name2 {
-    font-size: 1.1rem;
-    color: #000000;
-    position: relative;
-    text-decoration: none;
-    padding: 10px;
-   
+  font-size: 1.1rem;
+  color: #000000;
+  position: relative;
+  text-decoration: none;
+  padding: 10px;
 }
 
 .model-link {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 @media (max-width: 768px) {
@@ -85,9 +90,9 @@
     margin-bottom: 15px;
   }
 
-    .title-underline3 {
-      width: 100%;
-      margin: 0 auto 20px auto; 
+  .title-underline3 {
+    width: 100%;
+    margin: 0 auto 20px auto;
   }
 
   .model-grid {
@@ -108,6 +113,3 @@
     padding: 8px;
   }
 }
-
-
-
