--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -4,10 +4,27 @@
 }
 
 .contact-title {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-  color: #333;
-  margin-right: 80px;
+  color: black;
+  font-weight: 900;
+  font-size: 2.5rem;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transform: skew(-15deg);
+  animation: subtleMove 2s ease-in-out infinite alternate;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  margin-left: 80px;
+}
+
+@keyframes subtleMove {
+  0% {
+    transform: skew(-15deg) translateX(0);
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  }
+  100% {
+    transform: skew(-15deg) translateX(5px);
+    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .contact-info {
@@ -38,8 +55,8 @@
     padding: 0 1rem;
   }
 
-   .contact-title {
-    margin-right: 0; 
-    text-align: center; 
+  .contact-title {
+    margin-right: 0;
+    text-align: center;
   }
 }
