--- a/src/Card/product.css
+++ b/src/Card/product.css
@@ -45,8 +45,10 @@
   
 }
 
-.product img {
-  width: 80%;
+.product2 img {
+  width: 100%;
+  height: 180px; 
+  object-fit: cover; 
   border-radius: 6px;
 }
 
