--- a/src/pages/ProductResults/productresults.css
+++ b/src/pages/ProductResults/productresults.css
@@ -72,14 +72,43 @@
     border-color: #f39c12;
 }
 
-@media (max-width: 992px) {
-    .product-results {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
+@media (max-width: 768px) {
+  .title-parts-search {
+    margin-left: 0;
+    text-align: center;
+    font-size: 1.5rem;
+  }
 
-@media (max-width: 600px) {
-    .product-results {
-        grid-template-columns: 1fr;
-    }
+  .divider-parts3 {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .product-results {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding: 10px;
+  }
+
+  .product-card, .product2 { 
+    width: 90%;
+    max-width: 90%;
+    max-height: 90%;
+  }
+
+  .product-results img {
+    width: 90%;
+    height: 100px; 
+    object-fit: contain;
+    padding: 6px;
+  }
+
+  .product-title {
+    font-size: 1rem;
+  }
+
+  .product-price2 {
+    font-size: 0.95rem;
+  }
 }
