--- a/src/pages/search/search.css
+++ b/src/pages/search/search.css
@@ -35,17 +35,34 @@
   font-size: 16px;
   cursor: pointer;
   margin-top: 10px;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.search-btn:hover {
+  background-color: #e67e22;
+  color: #fff;
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .shop-text {
-  font-size: 24px;
-  font-weight: bold;
-  margin: 10px 0;
-  font-style: frank-new, sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+  font-size: 2.0rem;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transform: skew(-15deg);
+  animation: subtleMove 2s ease-in-out infinite alternate;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  margin-bottom: 0px;
 }
 
 .search-text {
   font-size: 18px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  transform: skew(-15deg);
   margin: 0;
 }
 
