--- a/src/pages/search/search.css
+++ b/src/pages/search/search.css
@@ -6,6 +6,7 @@
   position: relative;
   background-size: cover;
   background-position: center;
+  background-image: url("../../assets/img_hme_11.jpg");
 }
 
 .image-container {
@@ -49,7 +50,7 @@
 .shop-text {
   color: rgb(255, 255, 255);
   font-weight: 900;
-  font-size: 2.0rem;
+  font-size: 2rem;
   letter-spacing: 0.15em;
   text-transform: uppercase;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -74,11 +75,11 @@
   .search-container {
     position: absolute;
     top: 70%;
-    right: 20px;  
+    right: 20px;
     transform: translateY(-50%);
-    text-align: right;  
+    text-align: right;
     padding: 10px;
-    width: auto; 
+    width: auto;
   }
 
   .shop-text {
