--- a/src/Card/notificationCard.css
+++ b/src/Card/notificationCard.css
@@ -38,7 +38,7 @@
   border-left: 6px solid red;
 }
 
-.close-btn {
+.close-btn2 {
   margin-top: 15px;
   padding: 8px 20px;
   background-color: #007bff;
