--- a/src/pages/accessories/accessoryDetails.css
+++ b/src/pages/accessories/accessoryDetails.css
@@ -1,23 +1,11 @@
 .accessories-page {
   padding: 20px;
-}
-
-.header-section-acc h1 {
-  font-size: 28px;
-  color: #333;
-  font-weight: bold;
   text-align: center;
-  margin-bottom: 20px;
+  margin: 40px 180px;
 }
 
-.accessory-list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); 
-  gap: 5px; 
-  justify-items: center; 
-  padding: 20px;
-  margin-left: 100px;
-}
+
+
 
 .accessory-card {
   display: flex;
