--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,41 +1,13 @@
 .contact-page {
-  padding: 2rem;
+  padding: 20px;
   text-align: center;
-}
-
-.contact-title {
-  color: black;
-  font-weight: 900;
-  font-size: 2.5rem;
-  letter-spacing: 0.15em;
-  text-transform: uppercase;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  transform: skew(-15deg);
-  animation: subtleMove 2s ease-in-out infinite alternate;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  margin-left: 80px;
-}
-
-@keyframes subtleMove {
-  0% {
-    transform: skew(-15deg) translateX(0);
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  }
-  100% {
-    transform: skew(-15deg) translateX(5px);
-    text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
-  }
+  margin: 40px 180px;
 }
 
 .contact-info {
   font-size: 1.2rem;
   line-height: 1.8;
   color: #555;
-}
-
-.header-section3 {
-  margin-right: 1000px;
-  font-size: 24px;
 }
 
 @media (max-width: 768px) {
@@ -53,10 +25,5 @@
     font-size: 1rem;
     line-height: 1.5;
     padding: 0 1rem;
-  }
-
-  .contact-title {
-    margin-right: 0;
-    text-align: center;
   }
 }
